# histserv

./: .gitignore  .pre-commit-config.yaml  README.md  hatch_build.py  pixi.toml  pyproject.toml  run.py
.github/workflows/: cd.yml  ci.yml
dashboard/ui/: .prettierrc  package.json
dashboard/ui/src/: App.svelte  app.css
dashboard/ui/src/__tests__/: uhi-axis.test.ts
dashboard/ui/src/lib/components/: HistogramView.svelte
example/: client.py  client_methods.py  coffea_processor.py  start_server.sh
src/haas/: __main__.py  client.py  serialize.py  server.py
src/haas/protos/: hist_pb2.py  hist_pb2_grpc.py
src/histserv/: __init__.py  __main__.py  callbacks.py  chunked_hist.py  client.py  logging.py  serialize.py  server.py  service.py  util.py
src/histserv/dashboard/: __init__.py  bridge.py  histogram_json.py
src/histserv/dashboard/ui/: README.md  eslint.config.js  index.html  vite.config.ts
src/histserv/dashboard/ui/src/__tests__/: HistogramView.test.ts  ServerOverview.test.ts  websocket.test.ts
src/histserv/dashboard/ui/src/lib/: d3-histogram.ts  uhi-axis.ts
src/histserv/dashboard/ui/src/lib/components/: CpuUsage.svelte  HistogramLookup.svelte  Layout.svelte  RpcThroughput.svelte  ServerOverview.svelte
src/histserv/dashboard/ui/src/lib/stores/: histogramData.ts  histogramMeta.ts  stats.ts  websocket.ts
src/histserv/dashboard/ui/src/lib/types/: protocol.ts
src/histserv/protos/: hist.proto  hist_pb2.py  hist_pb2.pyi  hist_pb2_grpc.py
tests/: conftest.py  histogram_fixtures.py  test_chunked_hist.py  test_grpc_integration.py  test_serialize.py
tests/test_dashboard/: test_bridge_api.py  test_bridge_ws.py  test_histogram_json.py
